--- a/Main/index.html
+++ b/Main/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="#">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="bars-container" id="bars_container">
+
+        </div>
+        <div class="buttons-container">
+            <button id="randomize-arr-btn">Randomize Array</button>
+            <button id="sort-btn">Sort</button>
+            <button id="rst-btn">Reset</button>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
