Commit3 Created a random array and displayed it

--- a/Main/index.html
+++ b/Main/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <div class="bars-container" id="bars_container">
-
-        </div>
+    <div class="container" id="container">
         <div class="buttons-container">
             <button id="randomize-arr-btn">Randomize Array</button>
             <button id="sort-btn">Sort</button>
             <button id="rst-btn">Reset</button>
         </div>
+        <div class="bars-container" id="bars-container"></div>
     </div>
     <script src="index.js"></script>
 </body>
