Commit5 added style to bubble sort

--- a/Main/index.html
+++ b/Main/index.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container" id="container">
         <div class="buttons-container">
-            <button id="randomize-arr-btn">Randomize Array</button>
-            <button id="sort-btn">Sort</button>
-            <button id="rst-btn">Reset</button>
+            <button class="btns" id="randomize-arr-btn">New</button>
+            <button class="btns" id="sort-btn">Sort</button>
+            <button class="btns" id="rst-btn">Reset</button>
         </div>
         <div class="bars-container" id="bars-container"></div>
     </div>
