--- a/Main/BubbleSort/index.html
+++ b/Main/BubbleSort/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styleBubbleSort.css" />
+    <title>Bubble Sort</title>
 </head>
 <body>
+    <button class="btns" id="home-btn">Home</button>
     <button class="btns" id="rst-btn">Reset</button>
     <div class="container" id="container">
         <div class="buttons-container">
