added djisktra page

--- a/Main/MainPage/Main.html
+++ b/Main/MainPage/Main.html
@@ -18,15 +18,15 @@
 
     <div class="buttons" style="margin: 0 auto; width: 200px; text-align: center;">
         <button class="btns" id="bubblesort" data-inline="true">Bubble Sort</button>
-        <button class="btns" id="pathfinding" data-inline="true">PathFinding</button>
+        <button class="btns" id="diijsktra" data-inline="true">Diijsktra</button>
     </div>
     
     <script>
         document.getElementById('bubblesort').addEventListener('click', () => {
             location.href = "../BubbleSort/index.html";
         });
-        document.getElementById('pathfinding').addEventListener('click', () => {
-            location.href = "../PathFinding/index.html";
+        document.getElementById('diijsktra').addEventListener('click', () => {
+            location.href = "../DiijsktraAlg/index.html";
         })
     </script>
 </body>
