--- a/Main/DiijsktraAlg/index.html
+++ b/Main/DiijsktraAlg/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diijsktra</title>
+    <link rel="stylesheet" href="styleDiijsktra.css" />
 </head>
 <body>
-    
+    <button class="btns" id="home-btn">Home</button>
+    <button class="btns" id="rst-btn">Reset</button>
+    <script src="index.js"></script>
 </body>
 </html>
